# real_time_monster_strategy

./: .clang-format  CMakeLists.txt  overview.txt
.cache/clangd/index/: c_battle_action.c.4B2F191AC4752116.idx  c_battle_action.h.2E553F85D0A8FFBF.idx  c_battle_stats.h.623350C87B6ECAEB.idx  c_collision.h.8C757D5FB2804C2D.idx  c_common.c.42BBEE95F8C22349.idx  c_common.h.FBAFA01D56D4C4B8.idx  c_input.h.E1AAB5ECD8007355.idx  c_phases.c.9B26E20D1031ADDC.idx  c_phases.h.084ACEBE1B2D5899.idx  defines.h.54D0A4BB5788C32E.idx  enums.h.BD0DB78DDD43F6DD.idx  m_battle_main.c.95D559D1887D7E7A.idx  m_battle_main.h.360A86F2CF545635.idx  m_collision.c.408C5D686B05C71F.idx  m_input.c.856940F3D94CE0C5.idx  m_module.c.19DF54F8E14CB316.idx  m_module.h.56821B0DD092962F.idx  main.c.4B17CEA70D049864.idx  main.h.E6149A1DDCB0573C.idx  s_app.c.0FD2182ED3838172.idx  s_app.h.4D5BEEFF15B7F4CD.idx  s_battle_action.c.3D8AEF592BAAFD75.idx  s_battle_action.h.533E57075A2A9776.idx  s_battle_plan.c.507C19B9CCA93945.idx  (+17 more)
include/: defines.h  enums.h  types.h  vectypes.h
src/: main.c  main.h
src/components/: c_battle_action.c  c_battle_action.h  c_battle_stats.h  c_collision.h  c_common.c  c_common.h  c_input.h  c_phases.c  c_phases.h
src/managers/: m_battle_main.c  m_battle_main.h  m_collision.c  m_input.c  m_module.c  m_module.h
src/systems/: s_app.c  s_app.h  s_battle_action.c  s_battle_action.h  s_battle_plan.c  s_collision.c  s_collision.h  s_gfx.c  s_gfx.h  s_phys.c  s_phys.h
src/utils/: u_battlearrays.c  u_color.h  u_gjk_support.c  u_gjk_support.h  u_math.c  u_math.h  u_resource_dir.h
